[gd_scene load_steps=10 format=3 uid="uid://cbujhi3tvu5ra"]

[ext_resource type="Texture2D" uid="uid://cuvbtedpfw4f" path="res://assets/items.png" id="1_piljt"]
[ext_resource type="Script" path="res://UI/IventoryItem.gd" id="2_54w7e"]
[ext_resource type="Resource" uid="uid://c4a6126edpi8a" path="res://items/missing.tres" id="3_v7dwd"]
[ext_resource type="Script" path="res://inventory_slot.gd" id="4_12d5x"]
[ext_resource type="FontFile" uid="uid://cq5bp63dlpg0n" path="res://fonts/GravityBold8.ttf" id="4_454u2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r1w6b"]
atlas = ExtResource("1_piljt")
region = Rect2(16, 0, 16, 16)

[sub_resource type="Resource" id="Resource_m8lgp"]
script = ExtResource("4_12d5x")
item = ExtResource("3_v7dwd")
count = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bdgw1"]
size = Vector2(48, 48)

[sub_resource type="LabelSettings" id="LabelSettings_pwemk"]
line_spacing = 0.0
font = ExtResource("4_454u2")
font_size = 8
shadow_size = 0

[node name="InventoryItem" type="TextureRect"]
z_index = 1000
custom_minimum_size = Vector2(48, 48)
texture = SubResource("AtlasTexture_r1w6b")
expand_mode = 1
script = ExtResource("2_54w7e")
itemslot = SubResource("Resource_m8lgp")

[node name="influence" type="Area2D" parent="."]
collision_layer = 1073741824
collision_mask = 536870912

[node name="CollisionShape2D" type="CollisionShape2D" parent="influence"]
position = Vector2(24, 24)
shape = SubResource("RectangleShape2D_bdgw1")

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(8, 8)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -10.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "1"
label_settings = SubResource("LabelSettings_pwemk")
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 0

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_focus_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_focus_exited"]
[connection signal="body_entered" from="influence" to="." method="_on_body_entered"]
[connection signal="body_exited" from="influence" to="." method="_on_body_exited"]
